kubernetes/epg-station/epg-station/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/managed-by: epg-station
    app.kubernetes.io/name: epg-station
  name: epg-station
  namespace: epg-station
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: epg-station
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/managed-by: epg-station
        app.kubernetes.io/name: epg-station
    spec:
      containers:
      - env:
        - name: TZ
          value: Asia/Tokyo
        - name: NVIDIA_DRIVER_CAPABILITIES
          value: all
        image: ikihiki80/epgstation:nvenc-gdrive-202302020305
        name: epg-station
        ports:
        - containerPort: 8888
          protocol: TCP
        resources:
          limits:
            cpu: "4"
            memory: 4Gi
            nvidia.com/gpu: "1"
          requests:
            nvidia.com/gpu: "1"
        volumeMounts:
        - mountPath: /app/data
          name: data
        - mountPath: /app/thumbnail
          name: thumbnail
        - mountPath: /recorded
          name: recorded
        - mountPath: /app/config
          name: config
        - mountPath: /gdrive
          name: gdrive-secret
      restartPolicy: Always
      runtimeClassName: nvidia
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: epg-station-data
      - name: thumbnail
        persistentVolumeClaim:
          claimName: epg-station-thumbnail
      - configMap:
          defaultMode: 420
          name: epg-station
        name: config
      - hostPath:
          path: /recorded
          type: ""
        name: recorded
      - name: gdrive-secret
        secret:
          defaultMode: 420
          secretName: epg-station-gdrive-secret
