kubernetes/epg-station/epg-station/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/managed-by: epg-station
    app.kubernetes.io/name: epg-station
  name: epg-station
  namespace: epg-station
spec:
  ports:
  - name: "8888"
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    app.kubernetes.io/name: epg-station
  type: ClusterIP
