kubernetes/epg-station/epg-station/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: epg-station
  namespace: epg-station
spec:
  ingressClassName: traefik
  rules:
  - host: epg-station.local
    http:
      paths:
      - backend:
          service:
            name: epg-station
            port:
              number: 8888
        path: /
